--- a/app/src/main/res/layout/fragment_shopping_list_details.xml
+++ b/app/src/main/res/layout/fragment_shopping_list_details.xml
@@ -6,7 +6,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShoppingListDetailsFragment">
+    tools:context=".shoppinglist.ShoppingListDetailsFragment">
 
     <LinearLayout
         android:orientation="vertical"
