--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -34,4 +34,12 @@
         app:cnb_iconColor="#ffefef"
         app:cnb_textColor="#ffefef"
         />
+    <item
+        android:id="@+id/shopping_lists"
+        android:title="ShLists"
+        android:icon="@drawable/list"
+        app:cnb_backgroundColor="#ae0216"
+        app:cnb_iconColor="#ffefef"
+        app:cnb_textColor="#ffefef"
+        />
 </menu>
