--- a/app/src/main/res/layout/item_shopping_list.xml
+++ b/app/src/main/res/layout/item_shopping_list.xml
@@ -9,6 +9,43 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="#ffefef">
+            <RelativeLayout
+                android:layout_width="80dp"
+                android:layout_height="70dp">
+
+                <TextView
+                    android:id="@+id/number"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="1"
+
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="center"
+                    android:textColor="@color/own_red"
+                    android:textSize="22sp" />
+
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:padding="5dp"
+                    android:src="@drawable/page" />
+            </RelativeLayout>
             <TextView
                 android:id="@+id/name_shopping_list"
                 android:layout_width="match_parent"
