--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -19,6 +19,14 @@
         app:cnb_textColor="#ffefef"
         />
     <item
+        android:id="@+id/fridge"
+        android:title="Fridge"
+        android:icon="@drawable/fridge"
+        app:cnb_backgroundColor="#ae0216"
+        app:cnb_iconColor="#ffefef"
+        app:cnb_textColor="#ffefef"
+        />
+    <item
         android:id="@+id/search"
         android:title="Search"
         android:icon="@drawable/search"
