--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -4,7 +4,7 @@
     app:cnb_unselectedColor="#fff">
     <item
         android:id="@+id/home"
-        android:title=""
+        android:title="Home"
         android:icon="@drawable/home"
         app:cnb_backgroundColor="#ae0216"
         app:cnb_iconColor="#ffefef"
@@ -12,7 +12,7 @@
         />
     <item
         android:id="@+id/creator"
-        android:title=""
+        android:title="Creator"
         android:icon="@drawable/pencil"
         app:cnb_backgroundColor="#ae0216"
         app:cnb_iconColor="#ffefef"
@@ -20,7 +20,7 @@
         />
     <item
         android:id="@+id/fridge"
-        android:title=""
+        android:title="Fridge"
         android:icon="@drawable/fridge"
         app:cnb_backgroundColor="#ae0216"
         app:cnb_iconColor="#ffefef"
@@ -28,7 +28,7 @@
         />
     <item
         android:id="@+id/favorites"
-        android:title=""
+        android:title="Favorites"
         android:icon="@drawable/heart"
         app:cnb_backgroundColor="#ae0216"
         app:cnb_iconColor="#ffefef"
